[tool]
[tool.poetry]
name = "modularyze"
version = "0.1.0"
homepage = "https://github.com/jungerm2/modularyze"
description = "Top-level package for modularyze."
authors = ["Sacha Jungerman <jungerm2@illinois.edu>"]
readme = "README.rst"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "modularyze" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
